--- a/package.json
+++ b/package.json
@@ -4,12 +4,18 @@
   "description": "React TypeScript ToDo list",
   "main": "index.js",
   "scripts": {
+    "server": "node server.js",
     "start": "webpack serve --mode development",
     "build": "webpack --mode production",
     "lint": "eslint .",
     "lint:fix": "eslint . --fix"
   },
   "dependencies": {
+    "axios": "^1.6.7",
+    "body-parser": "^1.20.2",
+    "cors": "^2.8.5",
+    "express": "^4.18.3",
+    "mongoose": "^8.2.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^9.1.0",
