--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "React TypeScript ToDo list",
   "main": "index.js",
   "scripts": {
-    "server": "node server.js",
+    "server": "node server/server.js",
     "start": "webpack serve --mode development",
     "build": "webpack --mode production",
     "lint": "eslint .",
